1999-07-21  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* analysis.h: Add EZSequence protocol.

1999-06-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* EZBin.m ([EZBin -createEnd]): Use OutFile create:setName: instead
	of create:withName:.

	* EZGraph.m ([EZGraph
	-createGraphSequence:forSequence:withFeedFrom:andSelector:]):
	Likewise.

	* FunctionGraph.[hm], analysis.h ([FunctionGraph
	-setElement:setDataFeed:setFunctionSelector:]): Remove.

1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* EZBin.m ([EZBin -update]): Create and use a message probe for 
	getting values from collection items.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{noinst,inst}LIBS.
	(EXTRA_LTLIBRARIES): New variable.
	(libanalysis_la_LDFLAGS): Substitute @inst_LDFLAGS@.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I$(top_builddir)/libobjc.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES): Switch from lib_LTLIBRARIES.

1999-05-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* analysis.h, FunctionGraph.[hm] ([FunctionGraph
	-setXMin:Max:Resolution:]): Make resolution argument unsigned.

	* EZGraph.m (defaultGraphColors): New static variable.
	(graphColors): Remove (as a global).
	([EZGraph +createBegin:]): Set graphColors to defaultGraphColors.
	Set colorCount to NUMCOLORS.

	* EZGraph.[hm], analysis.h ([EZGraph -setColors:count:]): New method.

	* EZGraph.h (EZGraph): New variables graphColors and colorCount.

	* EZDistribution.m ([EZDistribution -createEnd], [EZDistribution
	-update], [EZDistribution -output]): Use binCount instead of
	numBins.

	* EZBin.m (defaultBinColors): New variable.  
	(binColors): Remove.
	([EZBin +createBegin:]): Set binColors to defaultBinColors and
	binColorCount to NUMCOLORS.
	([EZBin -createEnd]): Switch to unsigned casts for mallocs.