@@ -33,6 +33,7 @@
 
   unsigned colorIdx;
 }
++ create: aZone setTitle: (const char *)aTitle setAxisLabelsX: (const char *)xl Y: (const char *)yl;
 
 - setGraphics: (BOOL)state;
 - setFileOutput: (BOOL)state;
